--- a/topic.html
+++ b/topic.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!-- References to external CSS files-->
-      <link rel="stylesheet" href="styles/style.css">
+      <link rel="stylesheet" href="/styles/style.css">
 
       <!-- References to external fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
             rel="stylesheet">
 
       <!-- References to external responsive CSS file -->
-      <link rel="stylesheet" href="styles/responsive.css" media="screen and (max-width: 1024px)">
+      <link rel="stylesheet" href="/styles/responsive.css" media="screen and (max-width: 1024px)">
 </head>
 
 <body class="topic_body">
@@ -135,7 +135,7 @@
                         that could record sound and play it back. This decide was created on 4th December, 1877.
                   </p>
                   <figure>
-                        <img id="d_img" src="images/history.jpg" alt="history development of voice technology">
+                        <img id="d_img" src="/images/history.jpg" alt="history development of voice technology">
                         <figcaption>
                               History Development of Voice Technology <a href="#16">[16]</a>
                         </figcaption>
@@ -195,7 +195,7 @@
             <section id="growth">
                   <h2>Growth and Future</h2>
                   <figure class="growth_fig">
-                        <img id="g_img" src="images/vt2.jpg" alt="Percentage on improvements and changes to the technology">
+                        <img id="g_img" src="/images/vt2.jpg" alt="Percentage on improvements and changes to the technology">
                         <figcaption>Speechmatics Report Trends Predictions Voice Technology 2021 <a href="#14">[14]</a></figcaption>
                   </figure>
                   <p>
@@ -244,7 +244,7 @@
                         <a href="#19">[19]</a>
                   </p>
                   <figure class="r_fig">
-                        <img id="r_img" src="images/vt.jpeg" alt="voice recognition as a biometric indentification of a person">
+                        <img id="r_img" src="/images/vt.jpeg" alt="voice recognition as a biometric indentification of a person">
                         <figcaption>Voice Recognition as Biometric Identification of a Person<a href="#15">[15]</a></figcaption>
                   </figure>
             </section>
