--- a/topic.html
+++ b/topic.html
@@ -10,7 +10,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
       <!-- References to external CSS files-->
-      <link rel="stylesheet" href="/styles/style.css">
+      <link rel="stylesheet" href="styles/style.css">
 
       <!-- References to external fonts -->
       <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
             rel="stylesheet">
 
       <!-- References to external responsive CSS file -->
-      <link rel="stylesheet" href="/styles/responsive.css" media="screen and (max-width: 1024px)">
+      <link rel="stylesheet" href="styles/responsive.css" media="screen and (max-width: 1024px)">
 </head>
 
 <body class="topic_body">
