--- a/quiz.html
+++ b/quiz.html
@@ -183,10 +183,10 @@
                   <ul id="contacts">
                         <li id="email_icon">&#9993;</li>
                         <li><a href="mailto:101934317@student.swin.edu.au"> Joy </a></li>
-                        <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
+                        <li><a href="mailto:101533031@student.swim.edu.au"> Nelson </a></li>
                         <li><a href="mailto:103844052@student.swin.edu.au"> Minh </a></li>
                         <li><a href="mailto:103177240@student.swin.edu.a"> Tom </a></li>
-                        <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzman </a></li>
+                        <li><a href="mailto:102608927@student.swin.edu.au"> Uzman </a></li>
                   </ul>
             </article>
 
