enhancement responsive css

--- a/enhancements.html
+++ b/enhancements.html
@@ -83,6 +83,7 @@
         color: #e6d1ee; 
         } 
       </samp>
+      <br>
       <cite>https://www.w3schools.com/howto/howto_css_sidenav_buttons.asp</cite>
       <ol class="examples">
         <li><a href="topic.html#sidenav">Side Navigation</a></li>
@@ -99,6 +100,7 @@
         display: block; 
         } 
       </samp>
+      <br>
       <cite>https://www.w3schools.com/cssref/sel_target.asp</cite>
       <ol class="examples">
         <li><a href="quiz.html#quiznav">Quiz Navigation Tabs for the questions</a></li>
@@ -106,7 +108,7 @@
     </section>
     <section class="ex">
       <h4>Responsive Navigation Bar:</h4>
-      <samp class="navbar_codes">
+      <samp>
         .navbar__toggle .bar { 
         width: 25px; 
         height: 3px; 
