upload and changes from old html

--- a/enhancements.html
+++ b/enhancements.html
@@ -35,7 +35,7 @@
   <nav class="navbar" id="navbar_e">
     <div class="navbar__container">
       <header>
-        <a href="index.html" id="navbar__logo">Voice Technology</a>
+        <a href="index.php" id="navbar__logo">Voice Technology</a>
       </header>
       <div class="navbar__toggle" id="mobile-menu">
         <span class="bar"></span> <span class="bar"></span>
@@ -43,13 +43,13 @@
       </div>
       <ul class="navbar__menu">
         <li class="navbar__item">
-          <a href="index.html" class="navbar__links">Home</a>
+          <a href="index.php" class="navbar__links">Home</a>
         </li>
         <li class="navbar__item">
-          <a href="topic.html" class="navbar__links">Topic</a>
+          <a href="topic.php" class="navbar__links">Topic</a>
         </li>
         <li class="navbar__item">
-          <a href="quiz.html" class="navbar__links">Quiz</a>
+          <a href="quiz.php" class="navbar__links">Quiz</a>
         </li>
         <li class="navbar__item">
           <a href="enhancements.html" class="navbar__links">Enhancements</a>
